--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -146,7 +146,7 @@ a:hover { color: #FF0; }
 .baner-content {
   padding-top: 30vh;
   text-align: center;
-  background-image: url(../img/1st-section.jpg);
+  background-image: url(../img/1st-section.gif);
 }
 
 .baner-content h1 {
