--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -182,7 +182,7 @@ a:hover { color: #FF0; }
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15vh;
-  background-image: url(../img/2nd-section.jpg);
+  background-image: url(../img/2nd-section.gif);
   background-attachment: fixed;
   min-height: 100vh;
   background-size: cover;
@@ -245,7 +245,7 @@ h4, .h4 {
 
 .projects-content {
   padding-top: 20vh;
-  background-image: url(../img/3rd-section.jpg);
+  background-image: url(../img/3rd-section.gif);
 }
 
 .projects-content .item img {
@@ -299,7 +299,7 @@ h4, .h4 {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 8vh;
-  background-image: url(../img/4th-section.jpg);
+  background-image: url(../img/4th-section.gif);
   background-attachment: fixed;
   min-height: 100vh;
   background-size: cover;
@@ -368,7 +368,7 @@ section {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 16vh;
-  background-image: url(../img/5th-section.jpg);
+  background-image: url(../img/5th-section.gif);
 }
 
 .contact-form {
