--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ div#dog-spin {
 	background-size: 200px;
 	height: 200px;
 	width: 200px;
-	z-index: 2000;
+	/* z-index: 2000; */
 }
 
 div.dog-shocked {
